--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gulp-mocha": "^6.0.0",
     "gulp-nodemon": "^2.1.0",
     "gulp-sass": "^4.0.1",
+    "gulp-sass-variables": "^1.2.0",
     "gulp-sourcemaps": "^2.6.0",
     "gulp-util": "^3.0.7",
     "keypather": "^3.0.0",
